fix docker install

--- a/docker/docker.env
+++ b/docker/docker.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LfTnJpELg4KmmycP7UfbREqlMW/CSxcP+5ws6e3gBN0=
+APP_KEY=base64:ceL7z/oRw6Xtmbz3/JQowA6VnBHoqhsuotyoPaRBJ+k=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=tccs
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=tccs
+DB_PASSWORD=tccs
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
